<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Project A</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="lang_english">English</string>
    <string name="lang_french">French</string>
    <string name="theme_color">Colorful Theme</string>
	<string name="theme_simple">Simple Theme</string>
	
</resources>
